[add]いくつかの設定項目を保存するようにした

--- a/SerialPlotter/App.config
+++ b/SerialPlotter/App.config
@@ -13,6 +13,21 @@
             <setting name="WindowLocation" serializeAs="String">
                 <value>10, 10</value>
             </setting>
+            <setting name="settingBaudrate" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="settingLoggingWithTime" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="settingPlotTime" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="settingPlotMarker" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="settingBufferFullScale" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SerialPlotter.Properties.Settings>
     </userSettings>
 </configuration>
