[add]シリアルの設定値も保存するようにした

--- a/SerialPlotter/App.config
+++ b/SerialPlotter/App.config
@@ -28,6 +28,21 @@
             <setting name="settingBufferFullScale" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="settingDataBits" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="settingParity" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="settingStopBit" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="settingFlowCtrl" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="settingNewLine" serializeAs="String">
+                <value />
+            </setting>
         </SerialPlotter.Properties.Settings>
     </userSettings>
 </configuration>
