[add]Serial sender

--- a/SerialPlotter/App.config
+++ b/SerialPlotter/App.config
@@ -43,6 +43,12 @@
             <setting name="settingNewLine" serializeAs="String">
                 <value />
             </setting>
+            <setting name="settingSerialSendNl" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="settingSerialSendCr" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SerialPlotter.Properties.Settings>
     </userSettings>
 </configuration>
