--- a/SerialPlotter/Properties/Settings.settings
+++ b/SerialPlotter/Properties/Settings.settings
@@ -35,5 +35,11 @@
     <Setting Name="settingNewLine" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="settingSerialSendNl" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="settingSerialSendCr" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
