--- a/SerialPlotter/SerialPlotter.csproj
+++ b/SerialPlotter/SerialPlotter.csproj
@@ -56,6 +56,12 @@
     <Compile Include="DataTable.Designer.cs">
       <DependentUpon>DataTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormatWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormatWindow.Designer.cs">
+      <DependentUpon>FormatWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="General.cs" />
     <Compile Include="Serial.cs">
       <SubType>Component</SubType>
@@ -70,6 +76,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="DataTable.resx">
       <DependentUpon>DataTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormatWindow.resx">
+      <DependentUpon>FormatWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
