--- a/SerialPlotter/App.config
+++ b/SerialPlotter/App.config
@@ -49,6 +49,15 @@
             <setting name="settingSerialSendCr" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="settingAutoScale" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="settingYMin" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="settingYMax" serializeAs="String">
+                <value>100</value>
+            </setting>
         </SerialPlotter.Properties.Settings>
     </userSettings>
 </configuration>
