[add]save location of GW

--- a/SerialPlotter/App.config
+++ b/SerialPlotter/App.config
@@ -58,6 +58,9 @@
             <setting name="settingYMax" serializeAs="String">
                 <value>100</value>
             </setting>
+            <setting name="settingGraphWIndowLocation" serializeAs="String">
+                <value>20, 20</value>
+            </setting>
         </SerialPlotter.Properties.Settings>
     </userSettings>
 </configuration>
