--- a/SerialPlotter/Properties/Settings.settings
+++ b/SerialPlotter/Properties/Settings.settings
@@ -50,5 +50,8 @@
     <Setting Name="settingYMax" Type="System.String" Scope="User">
       <Value Profile="(Default)">100</Value>
     </Setting>
+    <Setting Name="settingGraphWIndowLocation" Type="System.Drawing.Point" Scope="User">
+      <Value Profile="(Default)">20, 20</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
