[add]docking graph window

--- a/SerialPlotter/App.config
+++ b/SerialPlotter/App.config
@@ -61,6 +61,9 @@
             <setting name="settingGraphWIndowLocation" serializeAs="String">
                 <value>20, 20</value>
             </setting>
+            <setting name="settingDockingGraphWindow" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SerialPlotter.Properties.Settings>
     </userSettings>
 </configuration>
