--- a/SerialPlotter/Properties/Settings.settings
+++ b/SerialPlotter/Properties/Settings.settings
@@ -53,5 +53,8 @@
     <Setting Name="settingGraphWIndowLocation" Type="System.Drawing.Point" Scope="User">
       <Value Profile="(Default)">20, 20</Value>
     </Setting>
+    <Setting Name="settingDockingGraphWindow" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
