--- a/SerialPlotter/SerialPlotter.csproj
+++ b/SerialPlotter/SerialPlotter.csproj
@@ -69,6 +69,9 @@
     <Compile Include="GraphWindow.Designer.cs">
       <DependentUpon>GraphWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainWindowLogic.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Serial.cs">
       <SubType>Component</SubType>
     </Compile>
