[add]2nd Y scale

--- a/SerialPlotter/App.config
+++ b/SerialPlotter/App.config
@@ -64,6 +64,15 @@
             <setting name="settingDockingGraphWindow" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="settingAutoScale2nd" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="settingY2ndMin" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="settingY2ndMax" serializeAs="String">
+                <value>100</value>
+            </setting>
         </SerialPlotter.Properties.Settings>
     </userSettings>
 </configuration>
